Fixed whitespaces

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,18 +1,18 @@
 .hero-navbar {
   display: flex;
-  position: fixed;
-  top: 0;
-  z-index: 2;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
   width: 100%;
-  padding: 40px 90px 0;
+  top: 0;
+  z-index: 5;
+  padding: 20px 40px;
 }
 
 .hero-navbar.fixed {
   background-color: #000;
   transition: .3s ease-in-out;
-  padding-top: 0;
+  padding: 5px 40px 5px 0
 }
 
 .hero-links {
@@ -25,8 +25,7 @@
 .hero-links a {
   flex-direction: column;
   text-decoration: none;
-  margin-right: 1.5rem;
-  padding-right: 1.5rem;
+  padding: 0 20px;
   font-size: 17px;
   font-family: "Montserrat", sans-serif;
   color: #fff;
@@ -38,6 +37,7 @@
   border: 4px solid #fff;
   border-radius: 30px;
   padding: 5px 5px;
+  margin: 0;
 }
 
 @media screen and (max-width: 1000px) {
