--- a/src/containers/Contact/Contact.css
+++ b/src/containers/Contact/Contact.css
@@ -16,7 +16,6 @@
 }
 
 .contact-header h2 {
-  height: auto;
   text-align: center;
   font-family: "Montserrat", sans-serif;
   font-size: 20px;
@@ -48,7 +47,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 30px;
+  padding: 30px 0;
 }
 
 .contact-socials a {
@@ -112,6 +111,14 @@ button:hover {
 }
 
 @media screen and (max-width: 1000px) {
+  .contact-header h2 {
+    font-size: 14px;
+  }
+
+  .contact-socials a{
+    padding: 0 5px;
+  }
+
   #contact-form input,
   textarea {
     width: 70%;
