--- a/src/containers/Hero/Hero.css
+++ b/src/containers/Hero/Hero.css
@@ -1,7 +1,10 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .hero-section {
   background: linear-gradient(100deg, #d7d7d7 48%, #000000 20%);
   width: 100%;
-  height: auto;
 }
 
 .hero-content {
@@ -73,50 +76,60 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 40px 0 20px;
+  padding: 0 20px 0 20px;
+  background: #000;
+}
+
+.hero-navbar-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s ease-out;
+  width: 100%;
+}
+
+.hero-navbar-links li {
+  list-style: none;
+  margin: 20px 0;
+  width: 100%;
+  text-align: center;
+  height: 20px;
+}
+
+.hero-navbar-links li:last-of-type {
+  margin-bottom: 0;
+}
+
+.hero-navbar-links li:hover {
+  background: #fff;
+}
+
+.hero-navbar-links a {
+  color: #fff;
+  text-align: center;
+  padding: 32px 0;
+  width: 100%;
+  transition: all 0.5s ease;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+}
+
+.hero-navbar-links a:hover {
+  color: #000;
+  text-transform: uppercase;
 }
 
 .menu {
   color: #fff;
   font-size: 40px;
-}
-
-.close-icon {
-  color: #fff;
-  font-size: 40px;
-  position: relative;
-  left: 78%;
-}
-
-.slider {
-  min-width: 100%;
-  height: auto;
-}
-
-.slider ul {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.slider ul li {
-  padding: 10px;
-  list-style: none;
-}
-
-.slider ul li a {
-  text-decoration: none;
-  font-family: "Montserrat", sans-serif;
-  color: #fff;
-  font-size: 12px;
-  text-align: center;
-}
-
-.slider ul li a:hover {
-  background-color: #fff;
-  color: #000;
-  text-transform: uppercase;
-  width: 100%;
+  background-color: transparent;
+  align-self: center;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin-top: 5px;
 }
 
 .mobile-content {
@@ -124,13 +137,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 160px;
+  padding: 110px 0;
   color: #fff;
 }
 
 .mobile-name {
   font-family: "Advent Pro", sans-serif;
-  width: 360px;
   font-size: 25px;
   line-height: 30px;
   text-align: center;
@@ -139,13 +151,11 @@
 .mobile-job {
   font-family: "Montserrat", sans-serif;
   font-size: 30px;
-  width: 360px;
   line-height: 39px;
   text-align: center;
 }
 
 .white-separator {
-  width: 120px;
   height: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -153,7 +163,6 @@
 
 .mobile-links {
   display: flex;
-  width: 120px;
   justify-content: space-around;
   align-items: center;
   margin-top: 10px;
@@ -164,10 +173,15 @@
   color: #fff;
   font-size: 20px;
   text-align: center;
+  padding: 0 10px;
 }
 
 .mobile-hero-linkedin {
   border-radius: 50%;
+}
+
+.nav {
+  display: none;
 }
 
 @media screen and (max-width: 1000px) {
