--- a/src/containers/ItBerries/ItBerries.css
+++ b/src/containers/ItBerries/ItBerries.css
@@ -7,7 +7,6 @@
   );
   color: #fff;
   width: 100%;
-  height: auto;
 }
 
 .itberries-header {
@@ -35,7 +34,6 @@
   font-family: "Open Sans", sans-serif;
   line-height: 138.68%;
   width: fit-content;
-  height: 89;
   align-self: center;
   text-align: justify;
 }
@@ -46,30 +44,24 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .itberries-section {
-    height: 450px;
-  }
-
   .itberries-header {
     font-size: 20px;
     text-align: center;
-    margin-right: 20px;
+    padding: 20px 0 20px 0;
   }
 
   .itberries-content {
     flex-direction: column;
     text-align: center;
-    height: 275px;
-    padding-left: 20px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 0;
   }
 
   .itberries-text {
     height: auto;
-    margin-top: 20px;
     text-align: justify;
-    margin-right: 1px;
+    padding: 0 20px 70px 20px;
   }
 
   .itberries-logo {
