--- a/src/containers/Skills/Skills.css
+++ b/src/containers/Skills/Skills.css
@@ -19,27 +19,25 @@
 
 .uses {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-    padding: 30px;
+    padding: 30px 0;
     font-family: "Montserrat", sans-serif;
     letter-spacing: 0.18538em;
     line-height: 37px;
 }
 
 .uses h2 {
-    margin-left: 320px;
+    padding: 0 190px;
 }
 
 .skills-container {
     display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
-    /* border: 1px solid red; */
     width: 1004px;
-    padding: 20px;
-    margin-left: 200px;
+    padding: 20px 0;
+    margin: 0 auto;
 }
 
 .skills-container div {
@@ -118,6 +116,11 @@
 }
 
 @media screen and (max-width: 1000px) {
+    .skills-header h2 {
+        font-size: 14px;
+        padding: 10px 20px;
+    }
+
     .uses {
         justify-content: center;
     }
@@ -137,7 +140,7 @@
     }
 }
 
-@media screen and (max-width: 1025px) {
+@media screen and (max-width: 1100px) {
     .skills-container {
         margin-left: 0;
     }
@@ -148,5 +151,6 @@
 
     .uses h2 {
         margin: 0;
+        padding: 0;
     }
 }
